opam-version: "1.2"
maintainer:   "anil@recoil.org"
authors:      ["Anil Madhavapeddy" "Richard Mortier" "Thomas Gazagnaire"
               "Pierre Chambart" "David Kaloper" "Jeremy Yallop" "David Scott"
               "Mindy Preston" ]
homepage:     "https://github.com/mirage/ocaml-cstruct"
license:      "ISC"
dev-repo:     "https://github.com/mirage/ocaml-cstruct.git"
bug-reports:  "https://github.com/mirage/ocaml-cstruct/issues"
tags: [ "org:mirage" "org:ocamllabs" ]
build: [
  ["jbuilder" "build" "--only-packages" "ppx_cstruct" "--root" "ppx" "-j" jobs "@install"]
]
depends: [
  "ocamlfind" {build}
  "cstruct"
  "ppx_tools_versioned" 
  "ocaml-migrate-parsetree"
]
available: [ocaml-version >= "4.02.3"]
